Style changes to ELIXIR nodes index page.

--- a/ckanext/tess/templates/nodes/index.html
+++ b/ckanext/tess/templates/nodes/index.html
@@ -17,10 +17,9 @@
   {# snippet "nodes/snippets/helper.html" #}
 
 <div class="row-fluid">
-    <div class="span8 offset2">
-      <div style="width:90%; margin:auto;">
-        <h1> Welcome to ELIXIR! <br>Select an ELIXIR Node to find out more about it: </h1>
-      </div>
+    <div class="offset1">
+        <h1>Welcome to ELIXIR Nodes</h1>
+        Find out training-related information for each node
     </div>
 </div>
 <br><br>
@@ -62,16 +61,16 @@
      {% snippet "nodes/snippets/flag.html", name="Finland", 
                                             flag="/images/node_flags/FI.png",
                                             page="/nodes/fi.html",
-                                            hon="<a href='mailto: '>Head Of Node</a>",
-                                            trc="<a href='mailto: '>Training Coord</a>",
-                                            tec="<a href='mailto: '>Tech Coord</a>" %}
+                                            hon="<a href='mailto: '>Head of node</a>",
+                                            trc="<a href='mailto: '>Training co-ord</a>",
+                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
 
      {% snippet "nodes/snippets/flag.html", name="Portugal", 
                                             flag="/images/node_flags/PT.png",
                                             page="/nodes/pt.html",
-                                            hon="<a href='mailto: '>Head Of Node</a>",
-                                            trc="<a href='mailto: '>Training Coord</a>",
-                                            tec="<a href='mailto: '>Tech Coord</a>" %}
+                                            hon="<a href='mailto: '>Head of node</a>",
+                                            trc="<a href='mailto: '>Training co-ord</a>",
+                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
 
   </div>
 </div>
@@ -81,21 +80,21 @@
      {% snippet "nodes/snippets/flag.html", name="Estonia", 
                                             flag="/images/node_flags/EE.png",
                                             page="/nodes/ee.html",
-                                            hon="<a href='mailto: '>Head Of Node</a>",
-                                            trc="<a href='mailto: '>Training Coord</a>",
-                                            tec="<a href='mailto: '>Tech Coord</a>" %}
+                                            hon="<a href='mailto: '>Head of node</a>",
+                                            trc="<a href='mailto: '>Training co-ord</a>",
+                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
      {% snippet "nodes/snippets/flag.html", name="Israel", 
                                             flag="/images/node_flags/IL.png",
                                             page="/nodes/il.html",
-                                            hon="<a href='mailto: '>Head Of Node</a>",
-                                            trc="<a href='mailto: '>Training Coord</a>",
-                                            tec="<a href='mailto: '>Tech Coord</a>" %}
+                                            hon="<a href='mailto: '>Head of node</a>",
+                                            trc="<a href='mailto: '>Training co-ord</a>",
+                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
      {% snippet "nodes/snippets/flag.html", name="Norway", 
                                             flag="/images/node_flags/NO.png",
                                             page="/nodes/no.html",
-                                            hon="<a href='mailto: '>Head Of Node</a>",
-                                            trc="<a href='mailto: '>Training Coord</a>",
-                                            tec="<a href='mailto: '>Tech Coord</a>" %}
+                                            hon="<a href='mailto: '>Head of node</a>",
+                                            trc="<a href='mailto: '>Training co-ord</a>",
+                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
   </div>
 </div>
 <br><br>    
@@ -105,16 +104,16 @@
      {% snippet "nodes/snippets/flag.html", name="Denmark", 
                                             flag="/images/node_flags/DK.png",
                                             page="/nodes/dk.html",
-                                            hon="<a href='mailto: '>Head Of Node</a>",
-                                            trc="<a href='mailto: '>Training Coord</a>",
-                                            tec="<a href='mailto: '>Tech Coord</a>" %}
+                                            hon="<a href='mailto: '>Head of node</a>",
+                                            trc="<a href='mailto: '>Training co-ord</a>",
+                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
 
      {% snippet "nodes/snippets/flag.html", name="EMBL-EBI", 
                                             flag="/images/nodes/ebi/logo.png",
                                             page="/nodes/embl.html",
-                                            hon="<a href='mailto: '>Head Of Node</a>",
-                                            trc="<a href='mailto: '>Training Coord</a>",
-                                            tec="<a href='mailto: '>Tech Coord</a>" %}
+                                            hon="<a href='mailto: '>Head of node</a>",
+                                            trc="<a href='mailto: '>Training co-ord</a>",
+                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
 
   </div>
 </div>
