Style tweaks for uk, nl and ebi nodes.

--- a/ckanext/tess/templates/nodes/uk.html
+++ b/ckanext/tess/templates/nodes/uk.html
@@ -15,15 +15,14 @@
 
   {% block node_heading %}
         <div class="row-fluid">
-            <div class="span10">
-                <h1 class="page-heading" style="text-align:center">{{ node_name }}        </h1>
-                <h3 style="text-align:center"><a href="http://elixir-uk.org">ELIXIR UK Homepage</a></h3>
+            <div class="span3">
+                <h3 style="text-align:center"><a href="http://elixir-uk.org">{{ node_name }}</a></h3>
             </div>
-            <div class="span2">
-                <a href="http://elixir-uk.org">
-               <img src="http://www.tgac.ac.uk/uploads/images/Outreach/ELIXIR_node_UK.png"/>     <!--style="max-height:200px"/-->     
-                </a>
-            </div>  
+            <!--<div class="span2">-->
+                <!--<a href="http://elixir-uk.org">-->
+               <!--<img src="http://www.tgac.ac.uk/uploads/images/Outreach/ELIXIR_node_UK.png"/>     &lt;!&ndash;style="max-height:200px"/&ndash;&gt;     -->
+                <!--</a>-->
+            <!--</div>  -->
         </div><br>
         <div class="row-fluid">
         <div class="span12">
