--- a/ckanext/tess/templates/nodes/embl.html
+++ b/ckanext/tess/templates/nodes/embl.html
@@ -15,15 +15,14 @@
 
   {% block node_heading %}
         <div class="row-fluid">
-            <div class="span10">
-                <h1 class="page-heading" style="text-align:center">{{ node_name }}        </h1>
-                <h3 style="text-align:center"><a href="http://wwwdev.ebi.ac.uk/">ELIXIR EBI Homepage</a></h3>
+            <div class="span3">
+                <h3 style="text-align:center"><a href="http://elixir-uk.org">{{ node_name }}</a></h3>
             </div>
-            <div class="span2">
-                <a href="http://wwwdev.ebi.ac.uk/">
-                  <img src="/images/nodes/ebi/logo.png"/>
-                </a>
-            </div>
+            <!--<div class="span2">-->
+                <!--<a href="http://wwwdev.ebi.ac.uk/">-->
+                  <!--<img src="/images/nodes/ebi/logo.png"/>-->
+                <!--</a>-->
+            <!--</div>-->
         </div><br>
         <div class="row-fluid">
         <div class="span12">
