--- a/ckanext/tess/templates/nodes/nl.html
+++ b/ckanext/tess/templates/nodes/nl.html
@@ -15,9 +15,8 @@
 
   {% block node_heading %}
         <div class="row-fluid">
-            <div class="span10">
-                <h1 class="page-heading" style="text-align:center">{{ node_name }}        </h1>
-                <h3 style="text-align:center"><a href="http://www.dtls.nl/elixir-nl/elixir-nl-2/">ELIXIR NL Homepage</a></h3>
+            <div class="span3">
+                <h3 style="text-align:center"><a href="http://elixir-uk.org">{{ node_name }}</a></h3>
             </div>
             <div class="span2">
                 <a href="http://www.dtls.nl/elixir-nl/elixir-nl-2/>
