--- a/ckanext/tess/templates/nodes/index.html
+++ b/ckanext/tess/templates/nodes/index.html
@@ -19,7 +19,23 @@
 <div class="row-fluid">
     <div class="offset1">
         <h1>Welcome to ELIXIR Nodes</h1>
-        Find out training-related information for each node
+        <p>Find out training-related information for each node</p>
+    </div>
+</div>
+<div class="row-fluid">
+    <div class="offset1 span10 module-content box" style="border: 1px solid #DDD; padding-bottom: 20px;">
+        <div class="span6 col1">
+            <h3 style="margin-top: 0px;">ELIXIR Hub</h3>
+            <p>
+                <a href="http://www.elixir-europe.org/about/elixir-hub">The Hub</a> accommodates the ELIXIR executive management and secretariat and
+                coordinates integration of services run from the ELIXIR nodes.
+                It has overall responsibility for developing and delivering the ELIXIR programme,
+                coordinates ELIXIR's governance bodies and technical committees, and
+                provides oversight of biological data throughout Europe by creating data registries
+                and coordinating development of data standards.
+            </p>
+        </div>
+        <div class="span6 col2"><img src="/images/elixir-hub.jpg"></div>
     </div>
 </div>
 <br><br>
