Added flags for more nodes

--- a/ckanext/tess/templates/nodes/index.html
+++ b/ckanext/tess/templates/nodes/index.html
@@ -116,10 +116,61 @@
                                             trc="<a href='mailto: '>Training Coord</a>",
                                             tec="<a href='mailto: '>Tech Coord</a>" %}
 
+     {% snippet "nodes/snippets/flag.html", name="Belgium", 
+                                            flag="/images/node_flags/BE.png",
+                                            page="/nodes/hub.html",
+                                            hon="<a href='mailto: '>Head Of Node</a>",
+                                            trc="<a href='mailto: '>Training Coord</a>",
+                                            tec="<a href='mailto: '>Tech Coord</a>" %}
   </div>
 </div>
+<br><br>
+<div class="row-fluid">
+  <div class="span11 offset1">
+     {% snippet "nodes/snippets/flag.html", name="Czech Republic", 
+                                            flag="/images/node_flags/CR.png",
+                                            page="/nodes/hub.html",
+                                            hon="<a href='mailto: '>Head Of Node</a>",
+                                            trc="<a href='mailto: '>Training Coord</a>",
+                                            tec="<a href='mailto: '>Tech Coord</a>" %}
 
-<br>
+     {% snippet "nodes/snippets/flag.html", name="France", 
+                                            flag="/images/node_flags/FR.png",
+                                            page="/nodes/hub.html",
+                                            hon="<a href='mailto: '>Head Of Node</a>",
+                                            trc="<a href='mailto: '>Training Coord</a>",
+                                            tec="<a href='mailto: '>Tech Coord</a>" %}
+
+     {% snippet "nodes/snippets/flag.html", name="Spain", 
+                                            flag="/images/node_flags/ES.png",
+                                            page="/nodes/hub.html",
+                                            hon="<a href='mailto: '>Head Of Node</a>",
+                                            trc="<a href='mailto: '>Training Coord</a>",
+                                            tec="<a href='mailto: '>Tech Coord</a>" %}
+  </div>
+</div>
+<br><br>
+<div class="row-fluid">
+  <div class="span11 offset1">
+     {% snippet "nodes/snippets/flag.html", name="Italy", 
+                                            flag="/images/node_flags/IT.png",
+                                            page="/nodes/hub.html",
+                                            hon="<a href='mailto: '>Head Of Node</a>",
+                                            trc="<a href='mailto: '>Training Coord</a>",
+                                            tec="<a href='mailto: '>Tech Coord</a>" %}
+
+     {% snippet "nodes/snippets/flag.html", name="Slovenia", 
+                                            flag="/images/node_flags/SI.png",
+                                            page="/nodes/hub.html",
+                                            hon="<a href='mailto: '>Head Of Node</a>",
+                                            trc="<a href='mailto: '>Training Coord</a>",
+                                            tec="<a href='mailto: '>Tech Coord</a>" %}
+  </div>
+</div>
+<br><br>
+
+
+
 {% endblock %}
 
 {% block secondary %}
