--- a/ckanext/tess/templates/nodes/snippets/helper.html
+++ b/ckanext/tess/templates/nodes/snippets/helper.html
@@ -3,7 +3,7 @@
  {% block header_site_navigation %}
     <nav class="section navigation">
       <ul class="nav nav-pills">
-        <li><a href="/nodes/index.html">Hub</a></li>
+        <li><a href="/nodes/hub.html">Hub</a></li>
         <li><a href="/nodes/uk.html">UK</a></li>
         <li><a href="/nodes/nl.html">Netherlands</a></li>
         <li><a href="/nodes/ch.html">Switzerland</a></li>
