--- a/ckanext/tess/templates/nodes/uk.html
+++ b/ckanext/tess/templates/nodes/uk.html
@@ -50,7 +50,7 @@
   {% endblock %}
  
   {% block organizations %}
-    <div class="span5">
+    <div class="span6">
      <div class="feed">
        <h2> Institutions </h2>
        <hr/>
@@ -65,14 +65,32 @@
   {% endblock %}
 
   {% block news %}
-    <div class="span5">
-     <div class="feed">
+    <div class="span6">
+     <!--div class="feed"-->
        <h2> Latest News </h2>
        <hr/>
-    <a class="twitter-timeline" href="https://twitter.com/ElixirNodeUk" data-widget-id="559708972698308608">Tweets by @ElixirNodeUk</a>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        <a class="twitter-timeline" href="https://twitter.com/ElixirNodeUk" data-widget-id="559708972698308608">Tweets by @ElixirNodeUk</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
      </div>
-    </div>
+    <!--/div-->
   {% endblock %} 
 
+
+  {% block staff %}
+   <div class="span5">
+     <div class="feed">
+       <h2> Staff </h2>
+       <hr/>
+        Chris Ponting <br>
+        Carole Goble <br> 
+        Terri Attwood <br>
+        Susanna Assunta-Sansone <br>
+        Aleksandra Nenadic <br>
+        Lee Larcombe <br>
+        Manuel Corpas <br>
+        Niall Beard <br>
+        Milo Thurston
+    </div>
+  </div>
+  {% endblock %}
 
