--- a/ckanext/tess/templates/nodes/hub.html
+++ b/ckanext/tess/templates/nodes/hub.html
@@ -15,24 +15,22 @@
 
 {% block primary %}
   {% snippet "nodes/snippets/helper.html" %}
-  <div class="row-fluid">
-     <div class="span12">
-         {% block node_heading %}
-             <h1 class="page-heading" style="text-align:center">{{ _('Node Hub') }}</h1>
-         {% endblock %}
-     </div>
-     <div class="span10">
-       {% block materials %}
-            {% for node_name in h.get_node_list() %}
-                {% snippet "nodes/snippets/materials_for_node.html", node=node_name, hub=True %}
-            {% endfor %}
-       {% endblock %}
-     </div>
-    </div>     
-    <div class="span2"></div>
-  </div>
-<img src="/images/hub.png">
-
+<div class="row-fluid">
+    <div class="offset1 span10 module-content box" style="border: 1px solid #DDD; padding-bottom: 20px;">
+        <div class="span6 col1">
+            <h3 style="margin-top: 0px;">ELIXIR Hub</h3>
+            <p>
+                <a href="http://www.elixir-europe.org/about/elixir-hub">The Hub</a> accommodates the ELIXIR executive management and secretariat and
+                coordinates integration of services run from the ELIXIR nodes.
+                It has overall responsibility for developing and delivering the ELIXIR programme,
+                coordinates ELIXIR's governance bodies and technical committees, and
+                provides oversight of biological data throughout Europe by creating data registries
+                and coordinating development of data standards.
+            </p>
+        </div>
+        <div class="span6 col2"><img src="/images/elixir-hub.jpg"></div>
+    </div>
+</div>
 <br>
 {% endblock %}
 
