--- a/ckanext/tess/templates/nodes/index.html
+++ b/ckanext/tess/templates/nodes/index.html
@@ -20,35 +20,28 @@
     <div class="offset1">
         <h1>Welcome to ELIXIR Nodes</h1>
         <p>Find out training-related information for each node</p>
+        <br>
     </div>
 </div>
 <div class="row-fluid">
-    <div class="offset1 span10 module-content box" style="border: 1px solid #DDD; padding-bottom: 20px;">
-        <div class="span6 col1">
-            <h3 style="margin-top: 0px;">ELIXIR Hub</h3>
-            <p>
-                <a href="http://www.elixir-europe.org/about/elixir-hub">The Hub</a> accommodates the ELIXIR executive management and secretariat and
-                coordinates integration of services run from the ELIXIR nodes.
-                It has overall responsibility for developing and delivering the ELIXIR programme,
-                coordinates ELIXIR's governance bodies and technical committees, and
-                provides oversight of biological data throughout Europe by creating data registries
-                and coordinating development of data standards.
-            </p>
-        </div>
-        <div class="span6 col2"><img src="/images/elixir-hub.jpg"></div>
+    <div class="span11 offset1">
+        {% snippet "nodes/snippets/flag.html", name="The Hub",
+        flag="/images/ELIXIR_logo.png",
+        page="/nodes/hub.html"
+        %}
     </div>
 </div>
-<br><br>
+<hr>
 <div class="row-fluid">
   <div class="span11 offset1">
-     {% snippet "nodes/snippets/flag.html", name="United Kingdom", 
-                                            flag="/images/node_flags/GB.png",
-                                            page="/nodes/uk.html",
-                                            hon="<a href='mailto:chris.ponting@dpag.ox.ac.uk'>Chris Ponting</a>",
-                                            trc="<a href='mailto: '>Rita Hendricusdottir</a>",
-                                            tec="<a href='mailto: '>Manuel Corpas </a>" %}
+      {% snippet "nodes/snippets/flag.html", name="United Kingdom",
+      flag="/images/node_flags/GB.png",
+      page="/nodes/uk.html",
+      hon="<a href='mailto:chris.ponting@dpag.ox.ac.uk'>Chris Ponting</a>",
+      trc="<a href='mailto: '>Rita Hendricusdottir</a>",
+      tec="<a href='mailto: '>Manuel Corpas </a>" %}
                                                          
-     {% snippet "nodes/snippets/flag.html", name="Netherlands", 
+     {% snippet "nodes/snippets/flag.html", name="Netherlands",
                                             flag="/images/node_flags/NL.png",
                                             page="/nodes/nl.html",
                                             hon="<a href='mailto: '>Barend Mons</a>",
@@ -64,8 +57,6 @@
 
   </div>
 </div>
-<br><br>
-
 <div class="row-fluid">
   <div class="span11 offset1">
      {% snippet "nodes/snippets/flag.html", name="Sweden", 
@@ -90,7 +81,6 @@
 
   </div>
 </div>
-<br><br>    
 <div class="row-fluid">
   <div class="span11 offset1">
      {% snippet "nodes/snippets/flag.html", name="Estonia", 
@@ -113,8 +103,6 @@
                                             tec="<a href='mailto: '>Tech co-ord</a>" %}
   </div>
 </div>
-<br><br>    
-
 <div class="row-fluid">
   <div class="span11 offset1">
      {% snippet "nodes/snippets/flag.html", name="Denmark", 
@@ -134,58 +122,52 @@
      {% snippet "nodes/snippets/flag.html", name="Belgium", 
                                             flag="/images/node_flags/BE.png",
                                             page="/nodes/hub.html",
-                                            hon="<a href='mailto: '>Head Of Node</a>",
-                                            trc="<a href='mailto: '>Training Coord</a>",
-                                            tec="<a href='mailto: '>Tech Coord</a>" %}
+                                            hon="<a href='mailto: '>Head of node</a>",
+                                            trc="<a href='mailto: '>Training co-ord</a>",
+                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
   </div>
 </div>
-<br><br>
 <div class="row-fluid">
   <div class="span11 offset1">
      {% snippet "nodes/snippets/flag.html", name="Czech Republic", 
                                             flag="/images/node_flags/CR.png",
                                             page="/nodes/hub.html",
-                                            hon="<a href='mailto: '>Head Of Node</a>",
-                                            trc="<a href='mailto: '>Training Coord</a>",
-                                            tec="<a href='mailto: '>Tech Coord</a>" %}
+                                            hon="<a href='mailto: '>Head of node</a>",
+                                            trc="<a href='mailto: '>Training co-ord</a>",
+                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
 
      {% snippet "nodes/snippets/flag.html", name="France", 
                                             flag="/images/node_flags/FR.png",
                                             page="/nodes/hub.html",
-                                            hon="<a href='mailto: '>Head Of Node</a>",
-                                            trc="<a href='mailto: '>Training Coord</a>",
-                                            tec="<a href='mailto: '>Tech Coord</a>" %}
+                                            hon="<a href='mailto: '>Head of node</a>",
+                                            trc="<a href='mailto: '>Training co-ord</a>",
+                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
 
      {% snippet "nodes/snippets/flag.html", name="Spain", 
                                             flag="/images/node_flags/ES.png",
                                             page="/nodes/hub.html",
-                                            hon="<a href='mailto: '>Head Of Node</a>",
-                                            trc="<a href='mailto: '>Training Coord</a>",
-                                            tec="<a href='mailto: '>Tech Coord</a>" %}
+                                            hon="<a href='mailto: '>Head of node</a>",
+                                            trc="<a href='mailto: '>Training co-ord</a>",
+                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
   </div>
 </div>
-<br><br>
 <div class="row-fluid">
   <div class="span11 offset1">
      {% snippet "nodes/snippets/flag.html", name="Italy", 
                                             flag="/images/node_flags/IT.png",
                                             page="/nodes/hub.html",
-                                            hon="<a href='mailto: '>Head Of Node</a>",
-                                            trc="<a href='mailto: '>Training Coord</a>",
-                                            tec="<a href='mailto: '>Tech Coord</a>" %}
+                                            hon="<a href='mailto: '>Head of node</a>",
+                                            trc="<a href='mailto: '>Training co-ord</a>",
+                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
 
      {% snippet "nodes/snippets/flag.html", name="Slovenia", 
                                             flag="/images/node_flags/SI.png",
                                             page="/nodes/hub.html",
-                                            hon="<a href='mailto: '>Head Of Node</a>",
-                                            trc="<a href='mailto: '>Training Coord</a>",
-                                            tec="<a href='mailto: '>Tech Coord</a>" %}
+                                            hon="<a href='mailto: '>Head of node</a>",
+                                            trc="<a href='mailto: '>Training co-ord</a>",
+                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
   </div>
 </div>
-<br><br>
-
-
-
 {% endblock %}
 
 {% block secondary %}
