Added pages for all the nodes

--- a/ckanext/tess/templates/nodes/embl.html
+++ b/ckanext/tess/templates/nodes/embl.html
@@ -3,8 +3,8 @@
 
 {# Override node_template blocks here for custom configuration #}
   {% block news %}
-    <div class="span5 offset1">
-     <div class="row-fluid feed">
+    <div class="span5">
+     <div class="feed">
        <h2> Latest News </h2>
        <hr/>
 <a class="twitter-timeline" href="https://twitter.com/emblebi" data-widget-id="559760117273747456">Tweets by @emblebi</a>
