--- a/ckanext/tess/templates/nodes/snippets/staff_for_node.html
+++ b/ckanext/tess/templates/nodes/snippets/staff_for_node.html
@@ -2,7 +2,7 @@
 {% set datasets = h.get_node_materials(node) %}
 {% if datasets != None %}
 
-   <div class="span6">
+   <!--div class="span6">
      <div class="feed">
        <h2> Staff </h2>
        <hr/>
@@ -16,5 +16,5 @@
         Niall Beard <br>
         Milo Thurston
     </div>
-  </div>
+  </div-->
 {% endif %}
