--- a/ckanext/tess/templates/nodes/ch.html
+++ b/ckanext/tess/templates/nodes/ch.html
@@ -1,19 +1,18 @@
-{% extends "page.html" %}
+{% set node_name = 'Switzerland' %}
+{% extends "node_template.html" %}
 
-{% block subtitle %}{{ _('Switzerland') }}{% endblock %}
 
-{% block breadcrumb_content %}
-<li class="active">{% link_for _('Switzerland'), controller='group', action='index' %}</li>
-{% endblock %}
+{#
+ Override blocks from the nodes_template.html here to add your own custom configuration.
+ The blocks are listed below. Move them out of this comment bracket to override.
+    {% block materials %}
+    {% endblock %}
+    {% block events %}
+    {% endblock %}
+    {% block related_orgs %}
+    {% endblock %}
+#}
 
-{% block primary %}
-{% snippet "nodes/snippets/helper.html" %}
-<br>
-<br>
-<br>
-<img src="/images/ch.png">
-<br>
-{% endblock %}
-{% block secondary %}{% endblock %}
+
 
 
