--- a/ckanext/tess/templates/nodes/snippets/helper.html
+++ b/ckanext/tess/templates/nodes/snippets/helper.html
@@ -15,10 +15,12 @@
         <li><a href="/nodes/no.html">Norway</a></li>
         <li><a href="/nodes/dk.html">Denmark</a></li>
         <li><a href="/nodes/embl.html">EMBL-EBI</a></li>
-          <!-- not members yet -->
-        <!--li><a href="/nodes/sv.html">Slovenia</a></li>
+        <li><a href="/nodes/si.html">Slovenia</a></li>
         <li><a href="/nodes/fr.html">France</a></li>
-        <li><a href="/nodes/be.html">Belgium</a></li-->
+        <li><a href="/nodes/be.html">Belgium</a></li>
+        <li><a href="/nodes/cr.html">Czech Republic</a></li>
+        <li><a href="/nodes/es.html">Spain</a></li>
+        <li><a href="/nodes/it.html">Italy</a></li>
     </ul>
   </nav>
   {% endblock %}
