Tidied up nodes' details in a nice list of hashes.

--- a/ckanext/tess/templates/nodes/nl.html
+++ b/ckanext/tess/templates/nodes/nl.html
@@ -52,7 +52,7 @@
        <h2> Institutions </h2>
        <hr/>
         <div style="margin-left:auto; margin-right:auto; width:90%">
-            <a href="http://ww.dtls.nl/"> <h3>Duth Techncentre for Life Sciences (DTL)</h3>
+            <a href="http://ww.dtls.nl/NL.html"> <h3>Duth Techncentre for Life Sciences (DTL)</h3>
             <img src="/images/nodes/nl/dtl.png"/></a>
        </div>
     </div>
