Revert "Merge branch 'master' of github.com:ElixirUK/ckanext-tess"
This reverts commit 8934516ba117e7b896184b538ad19edb918a4212, reversing
changes made to b64f9d798102183aea6f6064f77ca8ac3d3b7b0f.

--- a/ckanext/tess/templates/nodes/no.html
+++ b/ckanext/tess/templates/nodes/no.html
@@ -1,18 +1,24 @@
-{% set node_name = 'Norway' %}
-{% extends "node_template.html" %}
+{% extends "page.html" %}
 
+{% block subtitle %}{{ _('Norway') }}{% endblock %}
 
-{#
- Override blocks from the nodes_template.html here to add your own custom configuration.
- The blocks are listed below. Move them out of this comment bracket to override.
-    {% block materials %}
-    {% endblock %}
-    {% block events %}
-    {% endblock %}
-    {% block related_orgs %}
-    {% endblock %}
-#}
+{% block breadcrumb_content %}
+<li class="active">{% link_for _('Norway'), controller='group', action='index' %}</li>
+{% endblock %}
 
-
+{% block primary %}
+{% snippet "nodes/snippets/helper.html" %}
+<br>
+<br>
+<br>
+<br>
+<h1>Content for Norwegian Node</h1>
+<br>
+<br>
+<br>
+<br>
+<br>
+{% endblock %}
+{% block secondary %}{% endblock %}
 
 
