--- a/ckanext/tess/templates/nodes/fi.html
+++ b/ckanext/tess/templates/nodes/fi.html
@@ -1,18 +1,26 @@
-{% set node_name = 'Finland' %}
-{% extends "node_template.html" %}
+{% extends "page.html" %}
 
+{% block subtitle %}{{ _('Finland') }}{% endblock %}
 
-{#
- Override blocks from the nodes_template.html here to add your own custom configuration.
- The blocks are listed below. Move them out of this comment bracket to override.
-    {% block materials %}
-    {% endblock %}
-    {% block events %}
-    {% endblock %}
-    {% block related_orgs %}
-    {% endblock %}
-#}
+{% block breadcrumb_content %}
+<li class="active">{% link_for _('Finland'), controller='group', action='index' %}</li>
+{% endblock %}
 
-
+{% block primary %}
+{% snippet "nodes/snippets/helper.html" %}
+<br>
+<br>
+<br>
+<br>
+<h1>Content for Finnish Node</h1>
+<img src="
+http://upload.wikimedia.org/wikipedia/commons/thumb/b/bc/Flag_of_Finland.svg/2000px-Flag_of_Finland.svg.png" style="max-width:300px">
+<br>
+<br>
+<br>
+<br>
+<br>
+{% endblock %}
+{% block secondary %}{% endblock %}
 
 
