--- a/ckanext/tess/templates/nodes/il.html
+++ b/ckanext/tess/templates/nodes/il.html
@@ -1,18 +1,24 @@
-{% set node_name = 'Israel' %}
-{% extends "node_template.html" %}
+{% extends "page.html" %}
 
+{% block subtitle %}{{ _('Israel') }}{% endblock %}
 
-{#
- Override blocks from the nodes_template.html here to add your own custom configuration.
- The blocks are listed below. Move them out of this comment bracket to override.
-    {% block materials %}
-    {% endblock %}
-    {% block events %}
-    {% endblock %}
-    {% block related_orgs %}
-    {% endblock %}
-#}
+{% block breadcrumb_content %}
+<li class="active">{% link_for _('Israel'), controller='group', action='index' %}</li>
+{% endblock %}
 
-
+{% block primary %}
+{% snippet "nodes/snippets/helper.html" %}
+<br>
+<br>
+<br>
+<br>
+<h1>Content for Israeli Node</h1>
+<br>
+<br>
+<br>
+<br>
+<br>
+{% endblock %}
+{% block secondary %}{% endblock %}
 
 
