Revert "Tidied up nodes' details in a nice list of hashes."
This reverts commit b64f9d798102183aea6f6064f77ca8ac3d3b7b0f.

--- a/ckanext/tess/templates/nodes/snippets/flag.html
+++ b/ckanext/tess/templates/nodes/snippets/flag.html
@@ -4,10 +4,10 @@
         <div style="width: 95%; margin: auto;">
             <h3>{{name}}</h3>
     </a>
-    {% if not 'hub' in name.lower(): %}
+    {% if not 'hub' in name.lower() %}
         <b>Head of node:</b> {{ hon | safe }} <br/>
         <b>Training co-ord:</b> {{ trc | safe  }} <br/>
-        <b>Technical co-ord:</b> {{ tc | safe  }}
+        <b>Technical co-ord:</b> {{ tec | safe  }}
     {% endif %}
 </div>
 </div>
