--- a/ckanext/tess/templates/nodes/uk.html
+++ b/ckanext/tess/templates/nodes/uk.html
@@ -54,9 +54,9 @@
        <h2> Institutions </h2>
        <hr/>
         <div style="margin-left:auto; margin-right:auto; width:80%">
-            <a href="http://www.ox.ac.uk/GB.html"> <h3>The University of Oxford</h3>
+            <a href="http://www.ox.ac.uk/"> <h3>The University of Oxford</h3>
             <img src="/images/institutions/oxford.png"/></a>
-            <a href="http://www.manchester.ac.uk/GB.html"> <h3>The University of Manchester</h3>
+            <a href="http://www.manchester.ac.uk/"> <h3>The University of Manchester</h3>
             <img src="/images/institutions/manchester.jpg"/></a>     
        </div>
     </div>
