--- a/ckanext/tess/templates/nodes/snippets/helper.html
+++ b/ckanext/tess/templates/nodes/snippets/helper.html
@@ -1,27 +1,28 @@
 <!--div class="content"-->
-{% block about %}   
- {% block header_site_navigation %}
-    <nav class="section navigation">
-      <ul class="nav nav-pills">
-        <li><a href="/nodes/hub.html">Hub</a></li>
-        <li><a href="/nodes/uk.html">UK</a></li>
-        <li><a href="/nodes/nl.html">Netherlands</a></li>
-        <li><a href="/nodes/ch.html">Switzerland</a></li>
-        <li><a href="/nodes/se.html">Sweden</a></li>
-        <li><a href="/nodes/fi.html">Finland</a></li>
-        <li><a href="/nodes/pt.html">Portugal</a></li>
-        <li><a href="/nodes/ee.html">Estonia</a></li>
-        <li><a href="/nodes/il.html">Israel</a></li>
-        <li><a href="/nodes/no.html">Norway</a></li>
-        <li><a href="/nodes/dk.html">Denmark</a></li>
-        <li><a href="/nodes/embl.html">EMBL-EBI</a></li>
-          <!-- not members yet -->
-        <!--li><a href="/nodes/sv.html">Slovenia</a></li>
-        <li><a href="/nodes/fr.html">France</a></li>
-        <li><a href="/nodes/be.html">Belgium</a></li-->
+{% block about %}
+{% block header_site_navigation %}
+<nav class="section navigation">
+    <ul class="nav nav-pills">
+        <li><a href="/nodes/hub.html">The Hub</a></li>
+        <li><a href="/nodes/BE.html">Belgium</a></li>
+        <li><a href="/nodes/CR.html">Czech Republic</a></li>
+        <li><a href="/nodes/DK.html">Denmark</a></li>
+        <li><a href="/nodes/EMBL-EBI.html">EMBL-EBI</a></li>
+        <li><a href="/nodes/EE.html">Estonia</a></li>
+        <li><a href="/nodes/FI.html">Finland</a></li>
+        <li><a href="/nodes/FR.html">France</a></li>
+        <li><a href="/nodes/IL.html">Israel</a></li>
+        <li><a href="/nodes/IT.html">Italy</a></li>
+        <li><a href="/nodes/NL.html">Netherlands</a></li>
+        <li><a href="/nodes/NO.html">Norway</a></li>
+        <li><a href="/nodes/PT.html">Portugal</a></li>
+        <li><a href="/nodes/SI.html">Slovenia</a></li>
+        <li><a href="/nodes/ES.html">Spain</a></li>
+        <li><a href="/nodes/SE.html">Sweden</a></li>
+        <li><a href="/nodes/CH.html">Switzerland</a></li>
+        <li><a href="/nodes/GB.html">UK</a></li>
     </ul>
-  </nav>
-  {% endblock %}
+</nav>
 {% endblock %}
-<!--/div-->
+{% endblock %}
 
