--- a/ckanext/tess/templates/nodes/index.html
+++ b/ckanext/tess/templates/nodes/index.html
@@ -1,7 +1,6 @@
-
 {# node_name must be set from the page that extends this template.
- If you do not set node_name to be a valid Elixir Node name like 'United Kingdom' or 'Switzerland'
- you risk reversing the Entropy of the Universe and destroying us all. You've been warned!
+If you do not set node_name to be a valid Elixir Node name like 'United Kingdom' or 'Switzerland'
+you risk reversing the Entropy of the Universe and destroying us all. You've been warned!
 #}
 
 {% extends "page.html" %}
@@ -14,7 +13,7 @@
 {% endblock %}
 
 {% block primary %}
-  {# snippet "nodes/snippets/helper.html" #}
+{# snippet "nodes/snippets/helper.html" #}
 
 <div class="row-fluid">
     <div class="offset1">
@@ -32,149 +31,58 @@
     </div>
 </div>
 <hr>
+{% set nodes = [
+{'name' : 'Belgium', 'country_code' : 'BE', 'hon' : 'Head of node', 'trc': 'Training co-ord', 'tc' : 'Tech co-ord'},
+{'name' : 'Czech Republic', 'country_code' : 'CR', 'hon' : 'Head of node', 'trc': 'Training co-ord', 'tc' : 'Tech co-ord'},
+{'name' : 'Denmark', 'country_code' : 'DK', 'hon' : 'Head of node', 'trc': 'Training co-ord', 'tc' : 'Tech co-ord'},
+{'name' : 'EMBL-EBI', 'country_code' : 'EMBL-EBI', 'hon' : 'Head of node', 'trc': 'Training co-ord', 'tc' : 'Tech co-ord'},
+{'name' : 'Estonia', 'country_code' : 'EE', 'hon' : 'Head of node', 'trc': 'Training co-ord', 'tc' : 'Tech co-ord'},
+{'name' : 'Finland', 'country_code' : 'FI', 'hon' : 'Head of node', 'trc': 'Training co-ord', 'tc' : 'Tech co-ord'},
+{'name' : 'France', 'country_code' : 'FR', 'hon' : 'Head of node', 'trc': 'Training co-ord', 'tc' : 'Tech co-ord'},
+{'name' : 'Israel', 'country_code' : 'IL', 'hon' : 'Head of node', 'trc': 'Training co-ord', 'tc' : 'Tech co-ord'},
+{'name' : 'Italy', 'country_code' : 'IT', 'hon' : 'Head of node', 'trc': 'Training co-ord', 'tc' : 'Tech co-ord'},
+{'name' : 'Netherlands', 'country_code' : 'NL', 'hon' : 'Barend Mons', 'trc': 'Celia Van Gelder', 'tc' : 'Rob Hooft'},
+{'name' : 'Norway', 'country_code' : 'NO', 'hon' : 'Head of node', 'trc': 'Training co-ord', 'tc' : 'Tech co-ord'},
+{'name' : 'Portugal', 'country_code' : 'PT', 'hon' : 'Head of node', 'trc': 'Training co-ord', 'tc' : 'Tech co-ord'},
+{'name' : 'Slovenia', 'country_code' : 'SI', 'hon' : 'Head of node', 'trc': 'Training co-ord', 'tc' : 'Tech co-ord'},
+{'name' : 'Spain', 'country_code' : 'ES', 'hon' : 'Head of node', 'trc': 'Training co-ord', 'tc' : 'Tech co-ord'},
+{'name' : 'Sweden', 'country_code' : 'SE', 'hon' : 'Bengt Persson', 'trc': 'Sara Light', 'tc' : 'Mikael Borg'},
+{'name' : 'Switzerland', 'country_code' : 'CH', 'hon' : 'Rob Appel', 'trc': 'Patricia Palagi', 'tc' : 'Heinz Stockinger'},
+{'name' : 'United Kingdom', 'country_code' : 'GB', 'hon' : 'Chris Ponting', 'trc': 'Rita Hendricusdottir', 'tc' : 'Manuel Corpas'},
+] %}
+
+{% for index in range(0,nodes|length,3): %}
 <div class="row-fluid">
-  <div class="span11 offset1">
-      {% snippet "nodes/snippets/flag.html", name="United Kingdom",
-      flag="/images/node_flags/GB.png",
-      page="/nodes/uk.html",
-      hon="<a href='mailto:chris.ponting@dpag.ox.ac.uk'>Chris Ponting</a>",
-      trc="<a href='mailto: '>Rita Hendricusdottir</a>",
-      tec="<a href='mailto: '>Manuel Corpas </a>" %}
-                                                         
-     {% snippet "nodes/snippets/flag.html", name="Netherlands",
-                                            flag="/images/node_flags/NL.png",
-                                            page="/nodes/nl.html",
-                                            hon="<a href='mailto: '>Barend Mons</a>",
-                                            trc="<a href='mailto: '>Celia Van Gelder</a>",
-                                            tec="<a href='mailto: '>Rob Hooft</a>" %}
-
-     {% snippet "nodes/snippets/flag.html", name="Switzerland", 
-                                            flag="/images/node_flags/CH.png",
-                                            page="/nodes/ch.html",
-                                            hon="<a href='mailto: '>Rob Appel</a>",
-                                            trc="<a href='mailto: '>Patricia Palagi</a>",
-                                            tec="<a href='mailto: '>Heinz Stockinger </a>" %}
-
-  </div>
+    <div class="span11 offset1">
+        {% snippet "nodes/snippets/flag.html",
+        name = nodes[index].name,
+        flag = "/images/node_flags/" ~ nodes[index].country_code ~ ".png",
+        page = "/nodes/" ~ nodes[index].country_code ~ ".html",
+        hon = nodes[index].hon,
+        trc = nodes[index].trc,
+        tc = nodes[index].tc %}
+        {% if index + 1 < nodes|length: %}
+        {% snippet "nodes/snippets/flag.html",
+        name = nodes[index+1].name,
+        flag = "/images/node_flags/" ~ nodes[index+1].country_code ~ ".png",
+        page = "/nodes/" ~ nodes[index+1].country_code ~ ".html",
+        hon = nodes[index+1].hon,
+        trc = nodes[index+1].trc,
+        tc = nodes[index+1].tc %}
+        {% endif %}
+        {% if index + 2 < nodes|length: %}
+        {% snippet "nodes/snippets/flag.html", name=nodes[index+2].name,
+        name = nodes[index+2].name,
+        flag = "/images/node_flags/" ~ nodes[index+2].country_code ~ ".png",
+        page = "/nodes/" ~ nodes[index+2].country_code ~ ".html",
+        hon = nodes[index+2].hon,
+        trc = nodes[index+2].trc,
+        tc = nodes[index+2].tc %}
+        {% endif %}
+    </div>
 </div>
-<div class="row-fluid">
-  <div class="span11 offset1">
-     {% snippet "nodes/snippets/flag.html", name="Sweden", 
-                                            flag="/images/node_flags/SE.png",
-                                            page="/nodes/se.html",
-                                            hon="<a href='mailto: '>Bengt Persson</a>",
-                                            trc="<a href='mailto: '>Sara Light</a>",
-                                            tec="<a href='mailto: '>Mikael Borg</a>" %}
-     {% snippet "nodes/snippets/flag.html", name="Finland", 
-                                            flag="/images/node_flags/FI.png",
-                                            page="/nodes/fi.html",
-                                            hon="<a href='mailto: '>Head of node</a>",
-                                            trc="<a href='mailto: '>Training co-ord</a>",
-                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
-
-     {% snippet "nodes/snippets/flag.html", name="Portugal", 
-                                            flag="/images/node_flags/PT.png",
-                                            page="/nodes/pt.html",
-                                            hon="<a href='mailto: '>Head of node</a>",
-                                            trc="<a href='mailto: '>Training co-ord</a>",
-                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
-
-  </div>
-</div>
-<div class="row-fluid">
-  <div class="span11 offset1">
-     {% snippet "nodes/snippets/flag.html", name="Estonia", 
-                                            flag="/images/node_flags/EE.png",
-                                            page="/nodes/ee.html",
-                                            hon="<a href='mailto: '>Head of node</a>",
-                                            trc="<a href='mailto: '>Training co-ord</a>",
-                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
-     {% snippet "nodes/snippets/flag.html", name="Israel", 
-                                            flag="/images/node_flags/IL.png",
-                                            page="/nodes/il.html",
-                                            hon="<a href='mailto: '>Head of node</a>",
-                                            trc="<a href='mailto: '>Training co-ord</a>",
-                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
-     {% snippet "nodes/snippets/flag.html", name="Norway", 
-                                            flag="/images/node_flags/NO.png",
-                                            page="/nodes/no.html",
-                                            hon="<a href='mailto: '>Head of node</a>",
-                                            trc="<a href='mailto: '>Training co-ord</a>",
-                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
-  </div>
-</div>
-<div class="row-fluid">
-  <div class="span11 offset1">
-     {% snippet "nodes/snippets/flag.html", name="Denmark", 
-                                            flag="/images/node_flags/DK.png",
-                                            page="/nodes/dk.html",
-                                            hon="<a href='mailto: '>Head of node</a>",
-                                            trc="<a href='mailto: '>Training co-ord</a>",
-                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
-
-     {% snippet "nodes/snippets/flag.html", name="EMBL-EBI", 
-                                            flag="/images/nodes/ebi/logo.png",
-                                            page="/nodes/embl.html",
-                                            hon="<a href='mailto: '>Head of node</a>",
-                                            trc="<a href='mailto: '>Training co-ord</a>",
-                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
-
-     {% snippet "nodes/snippets/flag.html", name="Belgium", 
-                                            flag="/images/node_flags/BE.png",
-                                            page="/nodes/hub.html",
-                                            hon="<a href='mailto: '>Head of node</a>",
-                                            trc="<a href='mailto: '>Training co-ord</a>",
-                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
-  </div>
-</div>
-<div class="row-fluid">
-  <div class="span11 offset1">
-     {% snippet "nodes/snippets/flag.html", name="Czech Republic", 
-                                            flag="/images/node_flags/CR.png",
-                                            page="/nodes/hub.html",
-                                            hon="<a href='mailto: '>Head of node</a>",
-                                            trc="<a href='mailto: '>Training co-ord</a>",
-                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
-
-     {% snippet "nodes/snippets/flag.html", name="France", 
-                                            flag="/images/node_flags/FR.png",
-                                            page="/nodes/hub.html",
-                                            hon="<a href='mailto: '>Head of node</a>",
-                                            trc="<a href='mailto: '>Training co-ord</a>",
-                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
-
-     {% snippet "nodes/snippets/flag.html", name="Spain", 
-                                            flag="/images/node_flags/ES.png",
-                                            page="/nodes/hub.html",
-                                            hon="<a href='mailto: '>Head of node</a>",
-                                            trc="<a href='mailto: '>Training co-ord</a>",
-                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
-  </div>
-</div>
-<div class="row-fluid">
-  <div class="span11 offset1">
-     {% snippet "nodes/snippets/flag.html", name="Italy", 
-                                            flag="/images/node_flags/IT.png",
-                                            page="/nodes/hub.html",
-                                            hon="<a href='mailto: '>Head of node</a>",
-                                            trc="<a href='mailto: '>Training co-ord</a>",
-                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
-
-     {% snippet "nodes/snippets/flag.html", name="Slovenia", 
-                                            flag="/images/node_flags/SI.png",
-                                            page="/nodes/hub.html",
-                                            hon="<a href='mailto: '>Head of node</a>",
-                                            trc="<a href='mailto: '>Training co-ord</a>",
-                                            tec="<a href='mailto: '>Tech co-ord</a>" %}
-  </div>
-</div>
+{% endfor %}
 {% endblock %}
 
 {% block secondary %}
 {% endblock %}
-
-
-
-
-
-
