--- a/ckanext/tess/templates/nodes/nl.html
+++ b/ckanext/tess/templates/nodes/nl.html
@@ -1,7 +1,6 @@
 {% set node_name = 'Netherlands' %}
 {% extends "node_template.html" %}
 
-
 {#
  Override blocks from the nodes_template.html here to add your own custom configuration.
  The blocks are listed below. Move them out of this comment bracket to override.
@@ -52,7 +51,7 @@
        <h2> Institutions </h2>
        <hr/>
         <div style="margin-left:auto; margin-right:auto; width:90%">
-            <a href="http://ww.dtls.nl/"> <h3>Duth Techncentre for Life Sciences (DTL)</h3>
+            <a href="http://ww.dtls.nl/NL.html"> <h3>Duth Techncentre for Life Sciences (DTL)</h3>
             <img src="/images/nodes/nl/dtl.png"/></a>
        </div>
     </div>
