Styled the hub node on nodes index page.

--- a/ckanext/tess/templates/nodes/index.html
+++ b/ckanext/tess/templates/nodes/index.html
@@ -24,10 +24,15 @@ you risk reversing the Entropy of the Universe and destroying us all. You've bee
 </div>
 <div class="row-fluid">
     <div class="span11 offset1">
-        {% snippet "nodes/snippets/flag.html", name="The Hub",
-        flag="/images/ELIXIR_logo.png",
-        page="/nodes/hub.html"
-        %}
+        <div class="span3-hub" style="padding-bottom: 0px;">
+            <a href="/nodes/hub.html">
+                <img src="/images/ELIXIR_logo.png" class="img-circle" style="max-height:120px">
+                <div style="width: 95%; margin: auto;">
+                    <h3 style="margin-bottom: 0px;">The Hub</h3>
+            </a>
+        </div>
+    </div>
+    <div class="span1-hub"></div>
     </div>
 </div>
 <hr>
