Added Greece node.

--- a/ckanext/tess/templates/nodes/index.html
+++ b/ckanext/tess/templates/nodes/index.html
@@ -44,6 +44,7 @@ you risk reversing the Entropy of the Universe and destroying us all. You've bee
 {'name' : 'Estonia', 'country_code' : 'EE', 'hon' : 'Head of node', 'trc': 'Training co-ord', 'tc' : 'Tech co-ord'},
 {'name' : 'Finland', 'country_code' : 'FI', 'hon' : 'Head of node', 'trc': 'Training co-ord', 'tc' : 'Tech co-ord'},
 {'name' : 'France', 'country_code' : 'FR', 'hon' : 'Head of node', 'trc': 'Training co-ord', 'tc' : 'Tech co-ord'},
+{'name' : 'Greece', 'country_code' : 'GR', 'hon' : 'Head of node', 'trc': 'Training co-ord', 'tc' : 'Tech co-ord'},
 {'name' : 'Israel', 'country_code' : 'IL', 'hon' : 'Head of node', 'trc': 'Training co-ord', 'tc' : 'Tech co-ord'},
 {'name' : 'Italy', 'country_code' : 'IT', 'hon' : 'Head of node', 'trc': 'Training co-ord', 'tc' : 'Tech co-ord'},
 {'name' : 'Netherlands', 'country_code' : 'NL', 'hon' : 'Barend Mons', 'trc': 'Celia Van Gelder', 'tc' : 'Rob Hooft'},
