--- a/ckanext/tess/templates/nodes/snippets/helper.html
+++ b/ckanext/tess/templates/nodes/snippets/helper.html
@@ -11,6 +11,7 @@
         <li><a href="/nodes/EE.html">Estonia</a></li>
         <li><a href="/nodes/FI.html">Finland</a></li>
         <li><a href="/nodes/FR.html">France</a></li>
+        <li><a href="/nodes/GR.html">Greece</a></li>
         <li><a href="/nodes/IL.html">Israel</a></li>
         <li><a href="/nodes/IT.html">Italy</a></li>
         <li><a href="/nodes/NL.html">Netherlands</a></li>
