Fixed breadcrumbs for nodes' pages.

--- a/ckanext/tess/templates/nodes/hub.html
+++ b/ckanext/tess/templates/nodes/hub.html
@@ -10,7 +10,7 @@
 {% block subtitle %}{{ _('Nodes') }}{% endblock %}
 
 {% block breadcrumb_content %}
-<li class="active">{% link_for _('Nodes'), controller='group', action='index' %}</li>
+<li class="active"><a href="/nodes">Nodes</a></li>
 {% endblock %}
 
 {% block primary %}
