--- a/ckanext/tess/templates/nodes/index.html
+++ b/ckanext/tess/templates/nodes/index.html
@@ -9,7 +9,7 @@ you risk reversing the Entropy of the Universe and destroying us all. You've bee
 {% block subtitle %}{{ _('Nodes') }}{% endblock %}
 
 {% block breadcrumb_content %}
-<li class="active">{% link_for _('Nodes'), controller='group', action='index' %}</li>
+<li class="active"><a href="/nodes">Nodes</a></li>
 {% endblock %}
 
 {% block primary %}
