--- a/ckanext/tess/templates/nodes/EMBL-EBI.html
+++ b/ckanext/tess/templates/nodes/EMBL-EBI.html
@@ -1,4 +1,5 @@
 {% set node_name = 'EMBL-EBI' %}
+{% set country_code = 'EMBL-EBI' %}
 {% extends "node_template.html" %}
 
 {# Override node_template blocks here for custom configuration #}
