--- a/ckanext/tess/templates/node/index.html
+++ b/ckanext/tess/templates/node/index.html
@@ -10,7 +10,7 @@
 
 {% block page_primary_action %}
   {#% if h.check_access('node_create') %#}
-    {% link_for _('Add content provider'), controller='ckanext.tess.controller:NodeController', action='new', class_='btn btn-primary', icon='plus-sign-alt' %}
+    {% link_for _('Add Node'), controller='ckanext.tess.controller:NodeController', action='new', class_='btn btn-primary', icon='plus-sign-alt' %}
   {#% endif %#}
 {% endblock %}
 
@@ -27,15 +27,15 @@
     {% else %}
       <p class="empty">
         {{ _('There are currently no content providers for this site') }}.
-        {% if h.check_access('node_create') %}
+        {#% if h.check_access('node_create') %#}
           {% link_for _('How about creating one?'), controller='ckanext.tess.controller:NodeController', action='new' %}</a>
-        {% endif %}
+        {#% endif %#}
       </p>
     {% endif %}
   {% endblock %}
-  {% block page_pagination %}
+  {#% block page_pagination %}
     {{ c.page.pager() }}
-  {% endblock %}
+  {% endblock %#}
 {% endblock %}
 
 {% block secondary_content %}
