--- a/ckanext/tess/templates/nodes/index.html
+++ b/ckanext/tess/templates/nodes/index.html
@@ -16,10 +16,13 @@ you risk reversing the Entropy of the Universe and destroying us all. You've bee
 {# snippet "nodes/snippets/helper.html" #}
 
 <div class="row-fluid">
-    <div class="offset1">
+    <div class="span9 offset1">
         <h1>Welcome to ELIXIR Nodes</h1>
         <p>Find out training-related information for each node</p>
         <br>
+    </div>
+    <div class="span2" style="padding-top:20px"> 
+        {% link_for _('Add a Node'), controller='ckanext.tess.controller:NodeController', action='new', class_='btn btn-primary', icon='plus-sign-alt' %}
     </div>
 </div>
 <div class="row-fluid">
